# desktop-app

./: .gitignore  AGENTS.md  LICENSE  README.md  deploy-dist-debug.sh  deploy-dist.sh  index.html  info-player.md  info.md  itvt.sh  nix-build.sh  nix-itvt.sh  package.json  pnpm-lock.yaml  shell.nix
.github/workflows/: build.yml
scripts/: deploy-dist-debug.sh  deploy-dist.sh  package-bundle.sh  run.sh
scripts/nix/: all.sh  build.sh  compile.sh  itvt.sh  package-bundle.sh  run.sh
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  player.rs
src/components/layout/: EpgBar.vue  Sidebar.vue  TopBar.vue
src/components/live/: LivePlayer.vue
src/components/ui/: ApiErrorBanner.vue  ContextMenu.vue  DebugConsole.vue  LiveBadge.vue  SectionHeader.vue
src/components/vod/: VodCard.vue  VodCarousel.vue
src/composables/: useBackend.ts  useChannel.ts  useConnectivity.ts  useDeepLink.ts  useEpgApi.ts  useErrorCapture.ts  useFullscreen.ts  useMockData.ts  useOdysee.ts  useProfile.ts  useTheme.ts  useThumbnailCache.ts  useWatchHistory.ts
src/router/: index.ts
src/types/: index.ts
src/views/: DashboardView.vue  LiveView.vue  ProfileView.vue  ScheduleView.vue  SettingsView.vue  VodLibraryView.vue  WatchView.vue
